--- a/public/register.html
+++ b/public/register.html
@@ -14,7 +14,7 @@
         <nav class="nav">
             <img class="logo" src="css/assets/bg.png" alt="">
             <div class="navbt">
-                <button onclick="location.href='about.html'" target="_blank">About</button>
+                <button onclick="location.href='about-index.html'" target="_blank">About</button>
             </div>
         </nav>
         <div class="box2">
