--- a/public/about-index.html
+++ b/public/about-index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filmyadda - About</title>
     <link rel="stylesheet" href="css/styles.css">
-    
+    <link rel="icon" href="css/assets/final-logo.ico" type="image/x-icon">
 </head>
 
 <body>
