--- a/public/home.html
+++ b/public/home.html
@@ -7,6 +7,7 @@
     <title>Filmyadda - Home</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
+    <link rel="icon" href="css/assets/final-logo.ico" type="image/x-icon">`
 </head>
 
 <body>
