--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Filmyadda - Home</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js"></script>
+    <link rel="icon" href="css/assets/final-logo.ico" type="image/x-icon">
 </head>
 <body class="main">
  <div>
