--- a/public/login.html
+++ b/public/login.html
@@ -6,6 +6,7 @@
     <title>Filmyadda - Login</title>
     <link rel="stylesheet" href="css/styles.css">
     <script defer src="js/script.js"></script>
+    <link rel="icon" href="css/assets/final-logo.ico" type="image/x-icon">
     <style>
     </style>
 </head>
