--- a/public/player.html
+++ b/public/player.html
@@ -7,6 +7,7 @@
     <title>Movie Player</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js"></script>
+    <link rel="icon" href="css/assets/final-logo.ico" type="image/x-icon">
 </head>
 
 <body>
